[Structure] addressed spacing issues in the content.

--- a/src/styles/partials/header.scss
+++ b/src/styles/partials/header.scss
@@ -172,6 +172,19 @@ header {
     }
 }
 
+@include md-query() {
+    .nav {
+        @include span-columns(4 of 12);
+        float:right;
+        display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+        display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+        display: -ms-flexbox;      /* TWEENER - IE 10 */
+        display: -webkit-flex;     /* NEW - Chrome */
+        display: flex;
+        align-self: flex-end;
+    }
+}
+
 
 @include sm-and-below-query() {
     .nav {
