--- a/src/styles/partials/section-collapsible.scss
+++ b/src/styles/partials/section-collapsible.scss
@@ -44,6 +44,7 @@
     position:relative;
     left:-50px;
     top:29px;
+    margin-top: -2em;
 
     font-size: 2em;
 
