--- a/src/styles/wysiwyg.scss
+++ b/src/styles/wysiwyg.scss
@@ -5,6 +5,7 @@
         @extend .bold;
         @extend .italic;
         color:$pre-college-dark-blue;
+        width: 100%;
         // margin-top:.75em;
         // margin-bottom:.75em;
     }
